multiple responses for one prompt logic - migrate db and calculate on deck generation